--- a/publications.html
+++ b/publications.html
@@ -206,25 +206,14 @@
 
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Multimodal Intelligent Biosensing for Life Assistance Monitoring and Intension Recognition.</i> Khan, D., Alhasson, H. F., Abdelhaq, M, Alsaqour. R., Jalal, A.*, and Liu, H.* （2025）.  Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
-		<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensing+for+Life+Assistance+Monitoring+and+Intension+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* （2025）.  Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+		<a href="https://scholar.google.com/scholar?q=UAV-Based+Intelligent+Traffic+Surveillance+using+Recurrent+Neural+Networks+and+Swin+Transformer+for+Dynamic+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		<!--
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 		-->
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fbioe.2025.1543688" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1543688" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1543688</a>
-	</td></tr>
-	<tr><td>
-		<img src="images/Forthcoming.png" height="20" class = "pop1">
-		<i>Dynamic Graph Neural Networks for UAV-Based Group Activity Recognition in Structured Team Sports.</i> Zahra, I., Wu, Y., Alshehri, M., Alqahtani, Y, Aljuaid, H., Jalal, A.*, Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
-		<a href="https://scholar.google.com/scholar?q=Dynamic+Graph+Neural+Networks+for+UAV-Based+Group+Activity+Recognition+in+Structured+Team+Sports" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-		<!--
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-		-->
-		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1631998</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1681341" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1681341" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1681341</a>
 	</td></tr>
 	<tr><td>
 		<img src="images/Forthcoming.png" height="20" class = "pop1">
@@ -624,6 +613,84 @@
 		<img src="images/Highly.png" height="15" class = "pop1"> Best Paper Award (including "Student-Authored") <img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 		<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
 	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>A Review of Wearable Detectors for Toxic Environments: Devices, Mechanisms, Integration, and Application Scenarios.</i> Peter Mweetwa, Ezzegraoui Chorouk, Hui Liu*, Yanfeng Wu, Xiaofeng Zhao4, Yiqian Xu4, Xuhao Yan4 <br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>.</i> <br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>.</i> <br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>.</i> <br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>.</i> <br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>.</i> <br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
+	<tr><td>
+		<img src="images/Forthcoming.png" height="20" class = "pop1">
+		<i>.</i> <br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+		--!>
+	</td></tr>
+
 	<tr><td>
 		<i>The Bigger the Better? Towards EMG-Based Single-Trial Action Unit Recognition of Subtle Expressions. </i> Küster, D., Rammohan, R. A., Liu, H., Schultz, T., Koschke, R. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages 100-110. INSTICC, SciTePress.<br>
 		<img src="images/Highly.png" height="15" class = "pop1"> &nbsp;&nbsp;&nbsp;&nbsp;
