--- a/research.html
+++ b/research.html
@@ -39,7 +39,7 @@
 				<tr>
 					<td>
 						<a href="https://www.uni-bremen.de/en/csl/institute/team/staff/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/EN.svg" height="20"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-						<a href="https://www.uni-bremen.de/csl/institut/team/mitarbeiter/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/DE.svg" height="20"></a>
+						<a href="https://www.uni-bremen.de/csl/institut/team/mitarbeitende/dr-hui-liu" target="_blank" rel="noopener noreferrer"><img src="images/DE.svg" height="20"></a>
 					</td>
 					<td><b>Homepage @Universität Bremen</b></td>
 				</tr>
@@ -76,11 +76,11 @@
 					<td>
 						<a href="images/Keywords.png" target="_blank" rel="noopener noreferrer"><img src="images/Keywords.png" height = "400" class="slightpop"></a><br>
 						Google global scholar rankings by field labels:<br>
-						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:biosignals" target="_blank" rel="noopener noreferrer">Biosignals</a> (12)<br>
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:biosignals" target="_blank" rel="noopener noreferrer">Biosignals</a> (13)<br>
 						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:hidden_markov_model" target="_blank" rel="noopener noreferrer">Hidden Markov Models</a> (3)<br>
-						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:sensor_data_fusion" target="_blank" rel="noopener noreferrer">Sensor Data Fusion</a> (12)<br>
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:sensor_data_fusion" target="_blank" rel="noopener noreferrer">Sensor Data Fusion</a> (11)<br>
 						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:chinese_music" target="_blank" rel="noopener noreferrer">Chinese Music</a> (1)<br>
-						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:smart_building" target="_blank" rel="noopener noreferrer">Snart Building</a> (14)
+						&#9679; <a href="https://scholar.google.com/citations?view_op=search_authors&mauthors=label:smart_building" target="_blank" rel="noopener noreferrer">Smart Building</a> (15)
 					</td>
 					<td>
 						<!--
@@ -172,12 +172,11 @@
 				</td></tr>
 				<tr><td>
 					<i>Muscle Synergy and Co-Contraction Effects on Joystick Manipulation.</i> Ouyang, C., Cai, L.*, Yan, S., Zhang, T., Zhu, J., Chen, L., and Liu, H.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
+					<a href="https://scholar.google.com/scholar?q=Muscle+Synergy+and+Co-Contraction+Effects+on+Joystick+Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
-					<a href="https://www.researchgate.net/publication/395117308_Muscle_Synergy_and_Co-contraction_Effects_on_Joystick_Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395117308_Muscle_Synergy_and_Co-contraction_Effects_on_Joystick_Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/muscle-synergy-and-co-contraction-effects-on-joystick-manipulati/51405238" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-96899-0_16" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0_16" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0_16</a>
@@ -185,12 +184,11 @@
 				</td></tr>
 				<tr><td>
 					<i>EMG-Based Action Unit Recognition: Feature Engineering, Machine Learning, and Real-Time Classification.</i> Liu, H.*, Veldanda, A., Koschke, R., Schultz, T., and Küster, D.* (2025). Biomedical Engineering Systems and Technologies, Springer Nature Switzerland.<br>
+					<a href="https://scholar.google.com/scholar?q=EMG-Based+Action+Unit+Recognition%3A+Feature+Engineering%2C+Machine+Learning%2C+and+Real-Time+Classification" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/High-Level-Features-for-Human-Activity-Recognition-Hartmann-Liu/d247cc3dbe4ea9673b8f2bebdd62a10eef42d978" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
-					<a href="https://www.researchgate.net/publication/395118095_EMG-Based_Action_Unit_Recognition_Feature_Engineering_Machine_Learning_and_Real-Time_Classification" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395118095_EMG-Based_Action_Unit_Recognition_Feature_Engineering_Machine_Learning_and_Real-Time_Classification" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/emg-based-action-unit-recognition-feature-engineering-machine-le/51405266" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/chapter/10.1007/978-3-031-96899-0_3" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/978-3-031-96899-0_3" target="_blank" rel="noopener noreferrer">10.1007/978-3-031-96899-0_3</a>
@@ -292,25 +290,14 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Multimodal Intelligent Biosensing for Life Assistance Monitoring and Intension Recognition.</i> Khan, D., Alhasson, H. F., Abdelhaq, M, Alsaqour. R., Jalal, A.*, and Liu, H.* （2025）.  Frontiers in Bioengineering and Biotechnology. ISSN: 2296-4185.<br>
-					<a href="https://scholar.google.com/scholar?q=Multimodal+Intelligent+Biosensing+for+Life+Assistance+Monitoring+and+Intension+Recognition" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<i>UAV-Based Intelligent Traffic Surveillance using Recurrent Neural Networks and Swin Transformer for Dynamic Environments.</i> Almujally, N. A., Wu, T., Alhasson, H. F., Hanzla, M., Jalal, A.*, and Liu, H.* （2025）.  Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
+					<a href="https://scholar.google.com/scholar?q=UAV-Based+Intelligent+Traffic+Surveillance+using+Recurrent+Neural+Networks+and+Swin+Transformer+for+Dynamic+Environments" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					<!--
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					-->
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fbioe.2025.1543688" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fbioe.2025.1543688" target="_blank" rel="noopener noreferrer">10.3389/fbioe.2025.1543688</a>
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Dynamic Graph Neural Networks for UAV-Based Group Activity Recognition in Structured Team Sports.</i> Zahra, I., Wu, Y., Alshehri, M., Alqahtani, Y, Aljuaid, H., Jalal, A.*, Liu, H.* (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
-					<a href="https://scholar.google.com/scholar?q=Dynamic+Graph+Neural+Networks+for+UAV-Based+Group+Activity+Recognition+in+Structured+Team+Sports" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					-->
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1631998</a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1681341" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1681341" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1681341</a>
 				</td></tr>
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
@@ -710,6 +697,84 @@
 					<img src="images/Highly.png" height="15" class = "pop1"> Best Paper Award (including "Student-Authored") <img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
 				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>A Review of Wearable Detectors for Toxic Environments: Devices, Mechanisms, Integration, and Application Scenarios.</i> Peter Mweetwa, Ezzegraoui Chorouk, Hui Liu*, Yanfeng Wu, Xiaofeng Zhao4, Yiqian Xu4, Xuhao Yan4 <br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>.</i> <br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>.</i> <br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>.</i> <br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>.</i> <br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>.</i> <br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>.</i> <br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
 				<tr><td>
 					<i>The Bigger the Better? Towards EMG-Based Single-Trial Action Unit Recognition of Subtle Expressions. </i> Küster, D., Rammohan, R. A., Liu, H., Schultz, T., Koschke, R. (2025). In BIOSTEC 2025 - Proceedings of the 18th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 1: BIODEVICES, pages 100-110. INSTICC, SciTePress.<br>
 					<img src="images/Highly.png" height="15" class = "pop1"> &nbsp;&nbsp;&nbsp;&nbsp;
